# SoftRenderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Rasterizer.sln  Rasterizer.vcxproj  Rasterizer.vcxproj.filters
source/: Scene.h  bitmap.h  engine.cpp  engine.h  main.cpp  math.h  model.h  render_system.cpp  render_system.h  renderer.cpp  renderer.h  runtime_context.cpp  runtime_context.h  scene.cpp  scene.h  shader.cpp  shader.h
source/other/: bitmap.h  light.h  math.h  model.h  scene.h
src/: buffer.h  buffer.hpp  global.cpp  global.h  light.h  light.hpp  main.cpp  math.h  math.hpp  mesh.hpp  renderer.cpp  renderer.h  renderer.hpp  shader.cpp  shader.h  shader.hpp  vertex.hpp  window.cpp  window.h  window.hpp
